<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook">Continue with Facebook</string>
    <string name="app_name" translatable="false">PowerHome</string>
    <string name="back_arrow">Back arrow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="login_string_title">Log in</string>
    <string name="login_string_instruction">Sign in</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="forgotten_password">FORGOT PASSWORD?</string>
    <string name="new_on_the_app">New to PowerHome?</string>
    <string name="create_a_new_account">Créer un nouveau compte</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile">Mobile</string>
    <string name="phone">Phone</string>
    <string name="floor">FLOOR</string>
    <string name="appliance">appliance</string>
    <string name="appliances">appliances</string>
    <string name="ok">ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_feurst">Home</string>
    <string name="nav_sekont">Not Home</string>
    <string name="open_menu">Open the menu</string>
    <string name="close_menu">Close the menu</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">Account</string>
    <string name="profile_name_placeholder">John Doe</string>
    <string name="profile_email_placeholder">john.doe@email.com</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="profile_image_description">User profile image</string>
    <string name="log_out_button">Log Out</string>
</resources>