<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables"
    android:background="@color/windowBackground"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/img_back_arrow"
            app:tint="@color/textColorPrimary"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_string_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/first_name"
            android:src="@drawable/img_logo_user"
            app:tint="@color/colorPrimaryLight"
            android:layout_marginEnd="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="firstName"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryLight"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="35dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="lastName"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryLight"
            tools:ignore="LabelFor"
            android:layout_marginStart="45dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/email"
            android:src="@drawable/img_logo_mail"
            app:tint="@color/colorPrimaryLight"
            android:layout_marginEnd="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryLight"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/password"
            android:src="@drawable/img_logo_mdp"
            app:tint="@color/colorPrimaryLight"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryLight"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/phone"
            android:src="@drawable/img_logo_phone"
            app:tint="@color/colorPrimaryLight"
            android:layout_marginEnd="10dp"/>

        <Spinner
            android:id="@+id/phone_code"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/mobile"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryLight"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/create_account"
        android:layout_marginBottom="20dp"/>

</LinearLayout>